# CognitiveAgentEngine

./: .gitignore  README.md  alembic.ini  conftest.py  env.example  pyproject.toml
docker/: Dockerfile  docker-compose.models.yml  docker-compose.yml
docs/: cognitive-agent-engine-requirements.md
docs/plans/: cognitive-agent-engine-build-plan.md  m1-behavioral-test-plan.md
docs/reports/: M1_TEST_REPORT.md
migrations/: env.py
migrations/versions/: 20241202_000000_initial_agent_profiles.py  20241211_000000_add_memory_tables.py
src/: __init__.py
src/agents/: __init__.py  formatter.py  models.py  repository.py
src/api/: __init__.py  dependencies.py  main.py
src/cognitive/: __init__.py  accumulator.py  background.py  mind.py  models.py  processor.py  prompts.py  tiers.py
src/core/: config.py  exceptions.py
src/infrastructure/: __init__.py  budget_manager.py  database.py  metrics.py  model_client.py  model_client_mock.py  model_router.py  ollama_client.py  redis.py
src/memory/: __init__.py  long_term.py  manager.py  models.py  short_term.py  working.py
src/social/: __init__.py  builder.py  context.py  intelligence.py  intent.py  (+1 more)
tests/: __init__.py  conftest.py  sample_agents.py  test_accumulator.py  test_agents.py  test_background.py  test_cognitive.py  test_health.py  test_memory_integration.py  test_memory_manager.py  test_memory_working.py  test_mind.py  test_mind_integration.py  test_models.py  test_social_api.py  test_social_builder.py  test_social_context.py  test_social_integration.py  test_social_intelligence.py  test_social_intent.py
(+18 files in other folders)
